Arreglado el dimensionamiento en pantallas, ahora toca seguir con arreglar editar la pizarra despues de cambiar de pantalla o así

--- a/frontend/crear.html
+++ b/frontend/crear.html
@@ -134,7 +134,7 @@
 
               <div id="grupo-texto" class="tools hidden">
                 <img src="img/flecha-recta.png" draggable="true" data-tipo="flecha" />
-                <img src="img/flecha-curva.png" draggable="true" data-tipo="flecha" />
+                <!-- <img src="img/flecha-curva.png" draggable="true" data-tipo="flecha" /> -->
                 <!-- <button id="add-text-btn" title="Añadir texto"><img src="img/text-icon.png" /></button> -->
                  <button id="add-text-btn" class="tool-button">
                   <img src="img/text-icon.png" alt="Texto" draggable="false" />
